--- a/css/styles.css
+++ b/css/styles.css
@@ -9,21 +9,28 @@ body {
     background-color: #000000;
     font-family: 'Titillium Web', sans-serif;
     text-align: center;
+    animation-name: backdrop;
+    animation-duration: 8s;
+    animation-fill-mode: forwards;
 }
 
-.navbar {
-    border: 3px solid white;
-    width: 100vw;
-    height: 50px;
-    margin-top: 5px;
-    z-index: 100;
-    }
+@keyframes backdrop {
+    0% {color: #000000;}
+    50% {color: gray;}
+    100% {background-image: url("img/light.webp"); background-repeat: no-repeat; background-size: cover;}
+}  
+
+/* ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+NAVBAR
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ */
+
 
 /* ==================================================================
 Animations
 =================================================================== */
 
-.hi {
+
+ .hi {
     background-color: black;
     font-size: 16px;
     color: white;
@@ -55,6 +62,7 @@ Animations
     animation-fill-mode: forwards;
     padding-left: 10px;
     padding-right: 10px;
+    margin-top: 50px;
 }
 
 
@@ -64,45 +72,61 @@ Animations
     100% {top: 5px; color: white; font-size: 50px;}   
 }
 
-header {
-    visibility: hidden;
-    font-size: 16px;
-    animation-duration: 1s;
-    animation-name: header;
-    animation-delay: 3s;
-    position: relative;
-    top: 0;
-    animation-fill-mode: forwards;
-}
-
-@keyframes header {
-    0% {visibility: hidden; color: black;}   
-    100% {visibility: visible; color: white;}
-}
-
 
 .portfolioPic {
-    height: 400px;
-    width: 400px;
+    height: 0px;
+    width: 0px;
     max-width: 100%;
     background-image: url("img/LisaPortfolioPic2.jpg");
     margin: 0 auto;
     background-repeat: no-repeat;
     margin-top: 30px;
-    border-radius: 7px;
-    /* animation-name: end;
-    animation-delay: 5s;
-    animation-duration: 1s;
-    animation-fill-mode: forwards; */
+    border-radius: 50%;
+    animation-name: picture;
+    animation-delay: 6s;
+    animation-duration: 4s;
+    animation-fill-mode: forwards; 
 
 }
 
-/* @keyframes end {
-    0% {visibility: hidden;}
+@keyframes picture {
+    0% {height: 0px; width: 0px;}
+    100% {height: 140px; width: 140px;}
+}  
+
+.next >* {
+    visibility: hidden;
+    animation-name: end;
+    animation-delay: 6s;
+    animation-duration: 10s;
+    animation-fill-mode: forwards;
+    background-image: url("img/light.jpg"); background-repeat: no-repeat; background-size: cover;
+}
+
+@keyframes end {
+    0% {visibility: hidden;} 
     100% {visibility: visible;}
-} */ 
+}  
+
+
 
 /* ==================================================================
 Animations
 =================================================================== */
 
+div.container {
+    background-color: #2E383A;
+}
+
+.nav-item {
+    font: 20px;
+}
+
+p {
+    color: white;
+} 
+
+.white {
+    color: white;
+
+}
