--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@
     overflow: hidden;
     position: fixed;
     top: 0;
+    z-index: 40;
   }
   
   /* Style the links inside the navigation bar */
@@ -78,6 +79,7 @@ body {
     background-color: #000000;
     font-family: 'Titillium Web', sans-serif;
     text-align: center;
+    max-height: 80%;
 }
 
 .opening {
@@ -121,25 +123,26 @@ Animations
     100% {top: 10px; visibility: hidden; z-index: -1;}
 }
 
-.lisa {
-    font-size: 16px;
+.lisa p {
+    font-size: 8px;
     z-index: 1;
     position: relative;
     top: 1000px;
-    animation-duration: 5s;
+    animation-duration: 2s;
     animation-name: lisa;
     animation-timing-function: ease-out;
-    animation-delay: 3s;
+    animation-delay: 2s;
     animation-fill-mode: forwards;
     padding-left: 10px;
     padding-right: 10px;
-    margin-top: 50px;
+    margin: 0 auto;
+    width: 100%;
     height: 25px;
 }
 
 
 @keyframes lisa {
-    0% {top: 500px; display: none;}
+    0% {top: 500px; display: none; font-size: 16px;}
     10% {z-index: 100;}
     100% {top: 5px; color: white; font-size: 50px;}   
 }
@@ -150,14 +153,14 @@ Animations
    visibility: hidden;
     position: relative;
     animation-name: end;
-    animation-delay: 7s;
-    animation-duration: 4s;
+    animation-delay: 5s;
+    animation-duration: 2s;
     animation-fill-mode: forwards;
     background-image: url("../img/light.webp"); 
     background-repeat: no-repeat; 
     background-size: cover;
-    width: 100%;
-    height: 100%; 
+    max-width: 100%;
+    height: 100%;
     z-index: 20;
     text-align: center;
 }
@@ -179,26 +182,28 @@ Animations
 }
 .abouttext {
   text-align: center;
-  padding-left: 50px;
-  padding-right: 50px;
+  padding-left: 90px;
+  padding-right: 90px;
+  padding-bottom: 50px;
 }
 
 .about {
-  width: 100%;
+  width: 80%;
+  margin: 0 auto;
 }
 
 .pic {
   background-image: url("../img/lisapictureResized.jpg"); 
   background-repeat: no-repeat; 
   background-size: cover;
-  height: 300px;
-  width: 300px;
   margin-top: 50px;
- margin: auto;
   border-radius: 50%;
-
-
+  height: 200px;
+  width: 200px;
+  margin: 0 auto; 
 }
+
+
 
 /* ==================Media Queries================================================================= */
 
@@ -228,14 +233,36 @@ Animations
 
   @media screen and (min-width: 600px) {
     @keyframes end {
+      0% {visibility: hidden; top: 500px;} 
       100% {visibility: visible; top: 180px;}
   }  
-  
+
+  .pic {
+    float: right; 
+    width: 300px;
+    height: 300px;
+  }
+  .about {
+    float: left;
+    width: 40%;
+  }
   }
 
+  .lisa {
+    font-size: 16px;
+    animation-duration: 5s;
+    animation-name: lisa;
+    animation-timing-function: ease-out;
+    animation-delay: 3s;
+    animation-fill-mode: forwards;
+}
+
+
   @media screen and (min-width: 994px) {
+
     @keyframes end {
+      0% {visibility: hidden; top: 500px;} 
       100% {visibility: visible; top: 140px;}
   }  
-  
   }
+ 
